--- a/doc/paper_draft/sections/4-result.tex
+++ b/doc/paper_draft/sections/4-result.tex
@@ -59,7 +59,8 @@ And a linear path (\emph{Line}), where the camera faces the same direction and m
 
 %% real word dataset
 %The synthetic dataset just ego-motion, the real-word dataset is including non-rigid and objects motion.
-Although the synthetic dataset is highly realistic, real-world data tends to be more challenging, with complex lighting and motions.
+%Although the synthetic dataset is highly realistic, real-world data tends to be more challenging, with complex lighting and motions.
+Although the synthetic dataset is \new{reasonably} realistic, real-world data tends to be more challenging, with complex lighting and motions.
 %
 To further explore our method's performance qualitatively, we also test our method on the OmniPhotos dataset \cite{BerteYLR2020}, which contains diverse 360° videos of real scenes captured with a high-quality 360° video camera.
 %% how to evaluate
