--- a/doc/paper_draft/bmvc_review.tex
+++ b/doc/paper_draft/bmvc_review.tex
@@ -43,12 +43,12 @@
 \usepackage{xcolor}
 %\definecolor{skyblue}{rgb}{0.2,0.6,0.9}
 %\newcommand{\placeholder}[1]{\textcolor{skyblue}{\rule{\linewidth}{#1}}}
-%\newcommand{\TODO}[1]{\textcolor{red}{{[TODO: #1]}}}
+\newcommand{\TODO}[1]{\textcolor{red}{{[TODO: #1]}}}
 %\newcommand\todolist[1]{\textcolor{red}{#1}}
 %\newcommand{\IGNORE}[1]{}
-%\newcommand{\new}[1]{\textcolor{orange}{#1}}
-%\newcommand\MZY[1]{\textcolor{green}{{[Mingze: #1]}}}
-%\newcommand{\CR}[1]{\textcolor{cyan}{{[Christian: #1]}}}
+\newcommand{\new}[1]{\textcolor{blue}{#1}}
+\newcommand\MZY[1]{\textcolor{green}{{[Mingze: #1]}}}
+\newcommand{\CR}[1]{\textcolor{cyan}{{[Christian: #1]}}}
 
 \usepackage{microtype}
 %\usepackage{amsfonts}
