--- a/doc/paper_draft/sections/4-result.tex
+++ b/doc/paper_draft/sections/4-result.tex
@@ -52,9 +52,9 @@ We therefore implemented an ERP camera model using OpenGL geometry shaders that 
 %The 360° Replica dataset rendering with two kinds of camera path circle and line.
 %The circle path (\emph{Circle}) is the camera face to outward and moves along a 0.5-meter radius circle, each image render by 10° interval.
 %The line path (\emph{Line}) is the camera face the same direction and moves in a straight line, each image renders by 0.2-meter interval.
-We render two types of camera paths for ground-truth evaluation.
-A circular path (\emph{Circle}), in which the camera moves along a 50\,cm radius circle and faces outwards, with images rendered every 10°.
-And a linear path (\emph{Line}), where the camera faces the same direction and moves in a straight line, with images rendered every 20\,cm.
+We render two types of camera paths for ground-truth evaluation \new{at a resolution orf 2048$\times$1024\,pixels}.
+A \emph{Circle}, in which the camera moves along a 50\,cm radius circle and faces outwards, with images rendered every 10°.
+And a \emph{Line}, where the camera faces the same direction and moves in a straight line, with images rendered every 20\,cm.
 
 
 %% real word dataset
