--- a/doc/paper_draft/sections/5-discussion.tex
+++ b/doc/paper_draft/sections/5-discussion.tex
@@ -11,7 +11,12 @@ Finally, we blend optical flow to reduce discontinuities at face boundaries.
 %The result shows our method dramatic improve optical flow in 360° images and achieve state-of-the-art performance.
 Our evaluation shows that our method achieves state-of-the-art performance for 360° optical flow estimation.
 
+
 %%\textbf{Limitation \& Future Work}
+\paragraph{Limitations.}
+\TODO{Large translations.}
+
+
 \paragraph{Future Work.}
 %To sccelerate the projection and stitch step, with multi-thread or c++.
 %Pixel-based warping to deal with non-rigid or un-egomoiton.
