Clarify global rotation warping

--- a/doc/paper_draft/bmvc_review.tex
+++ b/doc/paper_draft/bmvc_review.tex
@@ -46,6 +46,7 @@
 \newcommand{\TODO}[1]{\textcolor{red}{{[TODO: #1]}}}
 %\newcommand\todolist[1]{\textcolor{red}{#1}}
 %\newcommand{\IGNORE}[1]{}
+\newcommand{\DELETE}[1]{\textcolor{red}{#1}}
 \newcommand{\new}[1]{\textcolor{blue}{#1}}
 \newcommand\MZY[1]{\textcolor{green}{{[Mingze: #1]}}}
 \newcommand{\CR}[1]{\textcolor{cyan}{{[Christian: #1]}}}
