--- a/doc/paper_draft/sections/5-discussion.tex
+++ b/doc/paper_draft/sections/5-discussion.tex
@@ -11,6 +11,8 @@ Finally, we blend optical flow to reduce discontinuities at face boundaries.
 %The result shows our method dramatic improve optical flow in 360° images and achieve state-of-the-art performance.
 Our evaluation shows that our method achieves state-of-the-art performance for 360° optical flow estimation.
 
+\TODO{clearly explain the strengths of the methodologies presented in this paper}
+
 
 %%\textbf{Limitation \& Future Work}
 \paragraph{Limitations.}
