--- a/doc/paper_draft/bmvc_review.tex
+++ b/doc/paper_draft/bmvc_review.tex
@@ -2,11 +2,11 @@
 
 %% Faster LaTeX compilation time, bigger file.
 %% TODO: Comment out for submission/final version.
-%\pdfcompresslevel=0
-%\pdfobjcompresslevel=0
+\pdfcompresslevel=0
+\pdfobjcompresslevel=0
 
 %% Enter your paper number here for the review copy
-\bmvcreviewcopy{298}
+%\bmvcreviewcopy{298}
 
 %\title{Panoramic Optical Flow Using Global Rotation Warping and Tangent Image}
 \title{360\!° Optical Flow using Tangent Images}
